# pypi-wassette

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: check-release.yml  ci.yml  pypi.yml
python/wassette_cli/: __init__.py
scripts/: build_wheels.py  check_release.py
